f18style.css: hide scrollbar for fixedinput on windows and linux (Forum #82351)
git-svn-id: https://svn.fhem.de/fhem/trunk@17371 2b470e98-0d58-463d-a4d8-8e2adae1ed80

--- a/fhem/www/pgm2/f18style.css
+++ b/fhem/www/pgm2/f18style.css
@@ -27,6 +27,12 @@ input.maininput { margin-left:10px; }
 }
 #menu > table td { padding-top: 2px; }
 
+/* Hide the scrollbar for fixed input */
+body.fixedInput[data-os=linux] div#content::-webkit-scrollbar   {display:none;}
+body.fixedInput[data-os=linux] div#menu::-webkit-scrollbar      {display:none;}
+body.fixedInput[data-os=windows] div#content::-webkit-scrollbar {display:none;}
+body.fixedInput[data-os=windows] div#menu::-webkit-scrollbar    {display:none;}
+
 #menu.hidden  { left:-120%!important; }
 #console { width:100%; top:2em; bottom:0px; position:absolute; overflow-y:auto;}
 #errmsg  { background-color: #000000; color: #FFFFFF;
